--- a/DocumentCentricStartUI/webapp/i18n/i18n.properties
+++ b/DocumentCentricStartUI/webapp/i18n/i18n.properties
@@ -6,19 +6,25 @@ appDescription=Document Centric Approval Request Creation
 #label
 
 #XFLD: 
-LABEL_TITLE=Title
+LABEL_TITLE=Предмет закупки
  
 #XFLD: 
-REQUEST_ID=Request ID
+COMMENTS=Комментарии
 
 #XFLD: 
-FIRST_NAME=First Name
+REQUEST_ID=Номер Заявки
 
 #XFLD: 
-LAST_NAME=Last Name
+FIRST_NAME=Имя
 
 #XFLD: 
-EMAIL_ADDRESS=Email Address
+LAST_NAME=Фамилия
+
+#XFLD: 
+ORGANIZATION=Организация
+
+#XFLD: 
+EMAIL_ADDRESS=Адрес эл. почты
 
 #XFLD: 
 USER_ID=User ID
@@ -27,7 +33,7 @@ USER_ID=User ID
 USER_NAME=User Name
 
 #XFLD: 
-COMMENT_FROM_REQUESTER=Comment from Requester
+COMMENT_FROM_REQUESTER=Комментарий Заявителя
 
 #XFLD: 
 STEP_ID=Step ID
@@ -39,7 +45,7 @@ APPROVER=Approver
 WATCHER=Watcher
 
 #XFLD: 
-COMMENT_FOR_APPROVER=Comment for Approver
+COMMENT_FOR_APPROVER=Коментарий Согласующего
 
 #XFLD: 
 DUE_DATE=Due Date
@@ -53,13 +59,22 @@ USER=User
 DOCUMENT_CENTRIC_REQUEST=Document Centric Approval Request
 
 #XHED:
-REQUESTER=Requester
+REQUESTER=Заявитель
 
 #XHED:
-REQUEST_DETAILS=Request Details
+REQUEST_DETAILS=Данные Заявки
 
 #XHED:
-ATTACHMENTS=Attachments
+REQUEST_AMOUNT=Сумма закупки
+
+#XHED:
+REQUESTER_DEPARTMENT=Сумма закупки
+
+#XHED:
+REQUEST_DESCRIPTION=Обоснование Закупки
+
+#XHED:
+ATTACHMENTS=Документы
 
 #XHED:
 UPLOADED_BY=Uploaded By
