--- a/DocumentCentricStartUI/webapp/i18n/i18n.properties
+++ b/DocumentCentricStartUI/webapp/i18n/i18n.properties
@@ -6,7 +6,7 @@ appDescription=Document Centric Approval Request Creation
 #label
 
 #XFLD: 
-LABEL_TITLE=Предмет закупки
+LABEL_TITLE=Предмет закупки 1
  
 #XFLD: 
 COMMENTS=Комментарии
