--- a/DocumentCentricTaskUI/webapp/i18n/i18n.properties
+++ b/DocumentCentricTaskUI/webapp/i18n/i18n.properties
@@ -6,83 +6,83 @@ appDescription=Document Centric Request Approval Task
 #label
 
 #XFLD: 
-LABEL_TITLE=Title
+LABEL_TITLE=Заголовок
  
 #XFLD: 
-REQUEST_ID=Request ID
+REQUEST_ID=Номер заявки
 
 #XFLD: 
-FIRST_NAME=First Name
+FIRST_NAME=Имя
 
 #XFLD: 
-LAST_NAME=Last Name
+LAST_NAME=Фамилия
 
 #XFLD: 
-COMMENT_FROM_REQUESTER=Comment from Requester
+COMMENT_FROM_REQUESTER=Комментарий Заявителя
 
 #XFLD: 
-STEP_NAME=Step Name
+STEP_NAME=Шаг
 
 #XFLD: 
-USER=User
+USER=Пользователь
 
 #XFLD: 
-STEP=Step
+STEP=Шаг
 
 #XFLD: 
-DECISION=Decision
+DECISION=Решение
 
 #XFLD: 
-COMMENT=Comment
+COMMENT=Комментарий
 
 #XFLD: 
-APPROVAL_COMMENTS=Approval Comments
+APPROVAL_COMMENTS=Комментарий утверждающего
 
 #title
 
 #XHED:
-REQUEST_DETAILS=Request Details
+REQUEST_DETAILS=Детали Заявки
 
 #XHED:
-STEP_DETAILS=Step Details
+STEP_DETAILS=Детали Шага
 
 #XHED:
-REQUESTER=Requester
+REQUESTER=Заявитель
 
 #XHED:
-ATTACHMENTS=Attachments
+ATTACHMENTS=Вложенные документы
 
 #XHED:
-UPLOADED_BY=Uploaded By
+UPLOADED_BY=Загружены кем
 
 #XHED:
-UPLOADED_ON=Uploaded On
+UPLOADED_ON=Дата загрузки
 
 #XHED:
-FILE_SIZE=File Size
+FILE_SIZE=Размер файла
 
 #XHED:
-HISTORY=History
+HISTORY=История
 
 #XHED:
-COMMENTS=Comments
+COMMENTS=Комментарии
 
 #button
 
 #XBTN:
-APPROVE=Approve
+APPROVE=Подтвердить
 
 #XBTN:
-REJECT=Reject
+REJECT=Отклонить
 
 #XBTN:
-REWORK=Rework
+REWORK=Вернуть на доработку
 
 #XBTN:
-FORWARD=Forward
+FORWARD=Вперед
 
 #XBTN:
-UPDATE=Update
+UPDATE=Изменить
 
 #message
 
