--- a/DocumentCentricStartUI/webapp/i18n/i18n.properties
+++ b/DocumentCentricStartUI/webapp/i18n/i18n.properties
@@ -1,12 +1,12 @@
 title=Document Centric Approval Request
 tileTitle=Document Centric Request
-appTitle=Document Centric Approval Request
-appDescription=Document Centric Approval Request Creation
+appTitle=Подготовка и подача заявки на закупку 
+appDescription=Создание заявки на закупку
 
 #label
 
 #XFLD: 
-LABEL_TITLE=Предмет закупки 1
+REQUEST_MATERIALS=Предмет закупки
  
 #XFLD: 
 COMMENTS=Комментарии
@@ -48,15 +48,15 @@ WATCHER=Watcher
 COMMENT_FOR_APPROVER=Коментарий Согласующего
 
 #XFLD: 
-DUE_DATE=Due Date
+DUE_DATE=Срок выполнения
 
 #XFLD: 
-USER=User
+USER=Пользователь
 
 #title
 
 #XHED:
-DOCUMENT_CENTRIC_REQUEST=Document Centric Approval Request
+DOCUMENT_CENTRIC_REQUEST=Создание заявки на закупку
 
 #XHED:
 REQUESTER=Заявитель
@@ -100,7 +100,7 @@ USERS=Users
 INVALID_EMAIL_ERROR = Invalid Email Address.
 
 #XMSG: File Size Limit Exceeded
-FILE_SIZE_EXCEEDED_ERROR = File size limit is exceeded. Please note that max file size length is
+FILE_SIZE_EXCEEDED_ERROR = Превышен предел размера файла. Обратите внимание, что максимальная длина файла составляет
 
 #XMSG: Workflow Access Token Error Message
 WORKFLOW_SERVICE_ERROR = Error occurred while accessing Workflow Service.
@@ -115,19 +115,19 @@ SCIM_ERROR = Couldn't retrieve data from SCIM. Please contact your administrator
 UNKNOWN_ERROR = Unknown error!
 
 #XMSG:
-FIELD_VALIDATION_ERROR_FIRST_NAME = First Name is a required field(*)
+FIELD_VALIDATION_ERROR_FIRST_NAME = Заполните обязательное поле - Имя(*)
 
 #XMSG:
-FIELD_VALIDATION_ERROR_LAST_NAME = Last Name is a required field(*)
+FIELD_VALIDATION_ERROR_LAST_NAME = Заполните обязательное поле - Фамилия(*)
 
 #XMSG:
-FIELD_VALIDATION_ERROR_EMAIL = Email Address is a required field(*)
+FIELD_VALIDATION_ERROR_EMAIL = Заполните обязательное поле - Адрес электронной почты(*)
 
 #XMSG:
-FIELD_VALIDATION_ERROR_USER_ID = User ID is a required field(*)
+FIELD_VALIDATION_ERROR_USER_ID = Заполните обязательное поле - User ID(*)
 
 #XMSG:
-FIELD_VALIDATION_ERROR_TITLE = Title is a required field(*)
+FIELD_VALIDATION_ERROR_REQ_MATERIAL = Заполните обязательное поле - Предмет закупки(*)
 
 #XMSG:
 APPROVAL_STEPS_LENGTH_ERROR = You have to add at least one approval step.
@@ -147,7 +147,7 @@ FIELD_VALIDATION_ERROR_GENERIC = Failed to validate one or more fields. Please r
 #button
 
 #XBTN:
-REQUEST_APPROVAL=Request Approval
+REQUEST_APPROVAL=Отправить Заявку на утверждение
 
 #XBTN:
-ADD_APPROVAL_STEP=Add Approval Step
+ADD_APPROVAL_STEP=Добавить шаг утверждения
