--- a/DocumentCentricTaskUI/webapp/i18n/i18n.properties
+++ b/DocumentCentricTaskUI/webapp/i18n/i18n.properties
@@ -38,6 +38,15 @@ COMMENT=Комментарий
 #XFLD: 
 APPROVAL_COMMENTS=Комментарий утверждающего
 
+#XFLD: 
+REQUEST_MATERIALS=Предмет закупки
+
+#XHED:
+REQUEST_AMOUNT=Сумма закупки
+
+#XHED:
+REQUEST_DESCRIPTION=Обоснование Закупки
+
 #title
 
 #XHED:
@@ -73,7 +82,7 @@ COMMENTS=Комментарии
 APPROVE=Подтвердить
 
 #XBTN:
-REJECT=Отклонить
+REJECT=Вернуть на доработку
 
 #XBTN:
 REWORK=Вернуть на доработку
