--- a/DocumentCentricReworkUI/webapp/i18n/i18n.properties
+++ b/DocumentCentricReworkUI/webapp/i18n/i18n.properties
@@ -6,69 +6,69 @@ appDescription=Document Centric Approval Request Creation
 #label
 
 #XFLD: 
-LABEL_TITLE=Title
+LABEL_TITLE=Заголовок
  
 #XFLD: 
-REQUEST_ID=Request ID
+REQUEST_ID=Номер заявки
 
 #XFLD: 
-FIRST_NAME=First Name
+FIRST_NAME=Имя
 
 #XFLD: 
-LAST_NAME=Last Name
+LAST_NAME=Фамилия
 
 #XFLD: 
-COMMENT_FROM_REQUESTER=Comment from Requester
+COMMENT_FROM_REQUESTER=Комментарий Заявителя
 
 #XFLD: 
-USER=User
+USER=Пользователь
 
 #XFLD: 
-STEP=Step
+STEP=Шаг
 
 #XFLD: 
-STEP_NAME=Step Name
+STEP_NAME=Шаг
 
 #XFLD: 
-DECISION=Decision
+DECISION=Решение
 
 #XFLD: 
-COMMENT=Comment
+COMMENT=Комментарии
 
 #XFLD: 
-REWORK_COMMENTS=Rework Comments
+REWORK_COMMENTS=Комментарии по корректировке
 
 #title
 
 #XHED:
-REQUESTER=Requester
+REQUESTER=Заявитель
 
 #XHED:
-REQUEST_DETAILS=Request Details
+REQUEST_DETAILS=Детали Заявки
 
 #XHED:
-STEP_DETAILS=Step Details
+STEP_DETAILS=Детали шага
 
 #XHED:
-ATTACHMENTS=Attachments
+ATTACHMENTS=Вложенные документы
 
 #XHED:
-UPLOADED_BY=Uploaded By
+UPLOADED_BY=Загружены кем
 
 #XHED:
-UPLOADED_ON=Uploaded On
+UPLOADED_ON=Дата загрузки
 
 #XHED:
-FILE_SIZE=File Size
+FILE_SIZE=Размер файла
 
 #XHED:
-HISTORY=History
+HISTORY=История
 
 #XHED:
-COMMENTS=Comments
+COMMENTS=Комментарии
 
 #XHED:
-REWORK_TITLE=Rework required for Request
+REWORK_TITLE=Требуется корректировка Заявки
 
 #message
 
@@ -100,7 +100,7 @@ FIELD_VALIDATION_ERROR_GENERIC = Failed to validate one or more fields. Please r
 #button
 
 #XBTN:
-SEND_FOR_APPROVAL=Send for Approval
+SEND_FOR_APPROVAL=Отправить на Утверждение
 
 #XBTN:
-TERMINATE=Terminate
+TERMINATE=Отменить Заявку. Терминировать процесс
